# stm32-eth

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Embed.toml  README.md  Xargo.toml  broken  broken-no-addr-main.asm  broken-no-addr.asm  broken.asm  build.rs  memory.x  openocd.cfg  openocd.gdb  repro-issue10.py  run.sh  working  working-no-addr.asm  working.asm  working2  working2-no-addr-main.asm  working2-no-addr.asm
.cargo/: config  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
examples/: arp-smoltcp.rs  arp.rs  async-rtic-timestamp.rs  client.rs  common.rs  ip-f107.rs  ip.rs  ip_rtic.rs  pktgen.rs  repro-issue10.rs  rtic-echo.rs  rtic-timestamp.rs  server.rs  timestamp.rs
examples/smoltcp-timesync/: client.rs  server.rs
examples/timesync/: client.rs  server.rs
src/: buffer.rs  desc.rs  dma.rs  init_alloc.rs  lib.rs  mac.rs  main.rs  packet_id.rs  peripherals.rs  phy.rs  ptp.rs  ring.rs  rx.rs  setup.rs  smi.rs  smoltcp_phy.rs  tx.rs
src/dma/: cache.rs  desc.rs  generic_ring.rs  mod.rs  packet_id.rs  raw_descriptor.rs  ring.rs  rx.rs  smoltcp_phy.rs  tx.rs
src/dma/rx/: descriptor.rs  f_series_desc.rs  f_series_descriptor.rs  h_desc.rs  h_descriptor.rs  mod.rs
src/dma/tx/: descriptor.rs  f_series_desc.rs  f_series_descriptor.rs  h_desc.rs  h_descriptor.rs  mod.rs
src/eth/: buffer.rs  mod.rs  phy.rs  rx.rs  setup.rs  smi.rs  tx.rs
src/mac/: miim.rs  mod.rs  smi.rs
src/mac/frame_filter/: control.rs  destination.rs  hash_table.rs  mod.rs  multicast.rs  source.rs
src/mac/frame_filtering/: control.rs  destination.rs  mod.rs  multicast.rs  source.rs
src/mac/miim/: f_series_miim.rs  h_miim.rs  mod.rs
src/phy/: lan87xxa.rs  mod.rs
src/ptp/: mod.rs  pps_pin.rs  subseconds.rs  timestamp.rs
src/smoltcp_phy/: mod.rs  smoltcp_phy.rs  smoltcp_ptp_phy.rs
