[package]
categories = ["embedded", "no-std", "hardware-support", "network-programming"]
name = "stm32-eth"
description = "Embedded Rust Ethernet driver for the STM32 MCU series"
license = "Apache-2.0"
authors = ["Astro <astro@spaceboyz.net>", "Johannes Draaijer <jcdra1@gmail.com>"]
version = "0.4.0"
keywords = ["ethernet", "eth", "stm32", "stm32f4", "stm32f7"]
repository = "https://github.com/stm32-rs/stm32-eth"
documentation = "https://docs.rs/stm32-eth/"
edition = "2018"
autoexamples = false

[badges]
travis-ci = { repository = "astro/stm32-eth", branch = "master" }
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["smoltcp-phy", "smoltcp/socket-raw", "stm32f429"]

[dependencies]
volatile-register = "0.2"
aligned = "0.4"
stm32f7xx-hal = { version = "0.7.0", optional = true }
stm32f4xx-hal = { version = "0.14", optional = true }
stm32f4 = { version = "0.15", optional = true }
stm32f1xx-hal = { version = "0.10", optional = true }
stm32h7xx-hal = { version = "0.13", optional = true }
ieee802_3_miim = "0.8"
cortex-m = "0.7"
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
siphasher = "*"
paste = { version = "1.0", optional = true }

[dependencies.smoltcp]
version = "0.8.2"
default-features = false
optional = true

[features]
default = [ "defmt", "ptp" ]
device-selected = []
fence = []
ptp = [ ]
f-series = [ ]

stm32f1xx-hal = [ "dep:stm32f1xx-hal", "f-series" ]
stm32f4xx-hal = [ "dep:stm32f4xx-hal", "f-series" ]
stm32f7xx-hal = [ "dep:stm32f7xx-hal", "f-series" ]
stm32h7xx-hal = [ "dep:stm32h7xx-hal", "paste"  ]

stm32f107 = ["stm32f1xx-hal/stm32f107", "device-selected"]

stm32f407 = ["stm32f4xx-hal/stm32f407", "stm32f4", "device-selected"]
stm32f417 = ["stm32f4xx-hal/stm32f417", "stm32f4", "device-selected"]
stm32f427 = ["stm32f4xx-hal/stm32f427", "stm32f4", "device-selected"]
stm32f429 = ["stm32f4xx-hal/stm32f429", "stm32f4", "device-selected"]
stm32f437 = ["stm32f4xx-hal/stm32f437", "stm32f4", "device-selected"]
stm32f439 = ["stm32f4xx-hal/stm32f439", "stm32f4", "device-selected"]
stm32f469 = ["stm32f4xx-hal/stm32f469", "stm32f4", "device-selected"]
stm32f479 = ["stm32f4xx-hal/stm32f479", "stm32f4", "device-selected"]

stm32f745 = ["stm32f7xx-hal/stm32f745", "device-selected", "fence"]
stm32f746 = ["stm32f7xx-hal/stm32f746", "device-selected", "fence"]
stm32f756 = ["stm32f7xx-hal/stm32f756", "device-selected", "fence"]
stm32f765 = ["stm32f7xx-hal/stm32f765", "device-selected", "fence"]
stm32f767 = ["stm32f7xx-hal/stm32f767", "device-selected", "fence"]
stm32f769 = ["stm32f7xx-hal/stm32f769", "device-selected", "fence"]
stm32f777 = ["stm32f7xx-hal/stm32f777", "device-selected", "fence"]
stm32f778 = ["stm32f7xx-hal/stm32f778", "device-selected", "fence"]
stm32f779 = ["stm32f7xx-hal/stm32f779", "device-selected", "fence"]

stm32h735 = ["stm32h7xx-hal/stm32h735", "device-selected", "fence"]

smoltcp-phy = ["smoltcp"]

[dev-dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
fugit = "0.3"
cortex-m-rtic = "1.0"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = [ "print-defmt" ] }
systick-monotonic = "1.0"
smoltcp = { version = "0.8", features = [ "medium-ethernet", "proto-ipv4", "socket-udp", "socket-tcp", "defmt" ], default-features = false }

[[example]]
name = "pktgen"
required-features = [ "defmt" ]

[[example]]
name = "ip"
required-features = [ "defmt", "smoltcp-phy" ]

[[example]]
name = "arp"
required-features = [ "defmt" ]

[[example]]
name = "rtic-echo"
required-features = [ "defmt" , "smoltcp-phy" ]

[[example]]
name = "rtic-timestamp"
required-features = [ "defmt", "ptp" ]

[profile.release]
debug = 2
lto = true
